--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,9 +1,4 @@
-
-spring.profiles.active = dev
-app.name = NA
-
-#
-spring.mvc.viwe.prefix=/views/
-
-# whenerver there is a viwe file .. ammet it with .jsp extention 
-spring.mvc.viwe.suffix=.jsp 
+spring.profiles.active=dev
+app.name= NA
+spring.mvc.view.prefix=/views/
+spring.mvc.view.suffix=.jsp
