--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,16 @@
 spring.profiles.active=dev
-app.name= NA
+app.name= http://blogapp-env.eba-cnmphzmw.us-east-2.elasticbeanstalk.com/
 spring.mvc.view.prefix=/views/
 spring.mvc.view.suffix=.jsp
+
+#Database properties - Production
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.datasource.url=jdbc:mysql://localhost:3306/blogapp 
+# change the local host to be the url of remote DB, and change the DB name to the remote Schema name
+#spring.datasource.url=jdbc:mysql://blog-app-instance.cyd4gpp0yk1k.us-east-2.rds.amazonaws.com:3306/blogapp
+spring.datasource.username=root
+spring.datasource.password=Moudi1233m
+spring.jpa.properties.hibernate.dialect= org.hibernate.dialect.MySQL5Dialect
+spring.jpa.show-sql=true
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.database-platform=org.hibernate.dialect.MySQL5Dialect
